<resources>
    <string name="app_name">E202Project</string>
    <string name="homepage">首页</string>
    <string name="etcPage">ETC</string>
    <string name="messagePage">消息</string>
    <string name="settingPage">设置</string>
    <string name="testsample">那baselineAligned是做什么用的呢？根据官方文档，baselineAligned默认设置为true,当设置为false时，        布局文件和它的孩子的基准线不对齐。</string>
    <string name="devicemanager">设备管理</string>
    <string name="modiferSSID">修改SSID</string>
    <string name="netchoose">网络运营商选择</string>
    <string name="wifimodel">WIFI模式</string>
    <string name="about">关于</string>
    <string name="devicereset">设备重启/关机</string>
    <string name="etctag">ETC信息</string>
    <string name="labelstate">标签状态:</string>
    <string name="getData">未请求到数据信息</string>
    <string name="cardType">卡片类型:</string>
    <string name="cardMonny">卡片余额:</string>
    <string name="cardstatus">卡片状态</string>
    <string name="joindevice">接入设备可视化管理</string>
    <string name="yetjoindevice">已接入设备</string>
    <string name="nodata">没有数据</string>
    <string name="dianxin">移动</string>
    <string name="reset">重启</string>
    <string name="colse">关闭</string>
    <string name="cancel">取消</string>
    <string name="sleepmodel">睡眠模式</string>
    <string name="standardmodel">标准模式</string>
    <string name="save">保存</string>
    <string name="inputpassword">请输入密码</string>
    <string name="inputaccountnumber">输入账号123456</string>
    <string name="macaddress">MAC地址</string>
    <string name="updata">更新</string>
    <string name="numbervalue">1.1.1.1.1</string>
    <string name="appversion">APP版本</string>
    <string name="productversion">产品硬件版本</string>
    <string name="productsoftversion">产品软件版本</string>
    <string name="serialnumber">序列号</string>
    <string name="message1">重启机器将会断开所有连接，确认重启？</string>
    <string name="message2">关机机器将会断开所有连接，确认关机？</string>
    <string name="messagetest1">想自己写一个Android电子阅读器, 在实现翻页功能的时候遇到这个问题.   只有知道了当前页中显示的字数, 才能知道下一页该从什么地方开始. 可是TextView却没有提供计算字数的方法.  尝试过用android.graphics.Paint.breakText()逐行累加字数, 可是TextView中的折行太过诡异, 算得时候始终存在误差.  后来用TextView.setEllipsize()来隐藏多余文字, 再用Layout.getEllipsisCount()得到被隐藏的字数, 可是它固定只显示两行, 第三行开始就全隐藏了.  所以请大家帮忙想想, 有没有办法能在不自定义新View的情况下实现TextView的分页, 谢谢了. 96KB/s</string>
</resources>
