<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/huise"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="@color/baise"
  android:id="@+id/manager"
 >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="15px"
        android:textSize="22dp"
        android:layout_gravity="center"
        android:text="@string/devicemanager"/>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:background="@drawable/more_gray_icon"/>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/ssid"
        android:layout_marginTop="15dp"
        android:background="@color/baise"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="15px"
            android:textSize="22dp"
            android:layout_gravity="center"
            android:text="@string/modiferSSID"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="25dp"
            android:background="@drawable/more_gray_icon"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"

        android:background="@color/baise"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="15px"
            android:textSize="22dp"
            android:layout_gravity="center"
            android:text="@string/netchoose"/>
        <TextView
            android:layout_width="wrap_content"

            android:layout_height="25dp"
            android:paddingRight="10dp"
            android:layout_gravity="center"
            android:text="@string/dianxin"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:id="@+id/model"
        android:background="@color/baise"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="15px"
            android:textSize="22dp"
            android:layout_gravity="center"
            android:text="@string/wifimodel"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginLeft="15px"
            android:textSize="18dp"
            android:layout_gravity="center"
            android:text="@string/sleepmodel"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:background="@drawable/more_gray_icon"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="2dp"
        android:id="@+id/about"
        android:background="@color/baise"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="15px"
            android:textSize="22dp"
            android:layout_gravity="center"
            android:text="@string/about"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:background="@drawable/more_gray_icon"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@color/baise"
        android:id="@+id/reset"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="15px"
            android:textSize="22dp"
            android:layout_gravity="center"
            android:text="@string/devicereset"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:background="@drawable/more_gray_icon"/>
    </LinearLayout>
</LinearLayout>