<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/text"
    android:background="@color/baise"
    android:layout_height="wrap_content">
<TextView
    android:layout_width="match_parent"

    android:layout_height="wrap_content"
    android:textColor="@color/black"
    android:gravity="center"
    android:textSize="@dimen/aboutone"
    android:id="@+id/reset_action"
    android:text="@string/reset"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray_line"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/aboutone"
        android:gravity="center"
        android:id="@+id/colse_action"
        android:text="@string/colse"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/gray_line"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/aboutone"

        android:gravity="center"
        android:id="@+id/cancel_action"
        android:text="@string/cancel"/>
</LinearLayout>