<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/huise"
    android:layout_height="match_parent">
    <include layout="@layout/toolbar_item"/>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/inputaccountnumber"
    />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputpassword"
            />
        <CheckBox
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:button="@null"
            android:layout_marginRight="15dp"
            android:background="@drawable/eye_check"
            android:layout_gravity="end"/>
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="80px"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="640px"
            android:layout_height="80px"
            android:textSize="28px"
            android:background="@drawable/radisbutton"
            android:text="@string/save"/>
    </LinearLayout>

</LinearLayout>